sfdx-source/dx-training/main/objects/Account/fields/Has_Project_Access_Referral__c.field-meta.xml
<CustomField>
    <fullName>Has_Project_Access_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Project Access Referral</label>
    <type>Checkbox</type>
</CustomField>