sfdx-source/dx-training/main/objects/Account/fields/Has_Workers_Comp_Referral__c.field-meta.xml
<CustomField>
    <fullName>Has_Workers_Comp_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Workers Comp Referral</label>
    <type>Checkbox</type>
</CustomField>