sfdx-source/dx-training/main/objects/Account/fields/Heard_about_us__c.field-meta.xml
<CustomField>
    <fullName>Heard_about_us__c</fullName>
    <label>Heard about us</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Web Search</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>MD Referral</fullName>
            </value>
            <value>
                <fullName>Google Ad</fullName>
            </value>
            <value>
                <fullName>Patient/Friend Referral</fullName>
            </value>
            <value>
                <fullName>Print Ad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>