sfdx-source/dx-training/main/objects/Account/fields/Holidays_for_Providers__c.field-meta.xml
<CustomField>
    <fullName>Holidays_for_Providers__c</fullName>
    <label>Holidays for Providers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>