sfdx-source/dx-training/main/objects/Account/fields/Holidays_Prov_Date__c.field-meta.xml
<CustomField>
    <fullName>Holidays_Prov_Date__c</fullName>
    <label>Holidays Prov Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>