sfdx-source/dx-training/main/objects/Account/fields/Identity_Theft_Challenge_Question__c.field-meta.xml
<CustomField>
    <fullName>Identity_Theft_Challenge_Question__c</fullName>
    <label>Identity Theft-Challenge Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>