sfdx-source/dx-training/main/objects/Account/fields/Identity_Theft_Challenge_Response__c.field-meta.xml
<CustomField>
    <fullName>Identity_Theft_Challenge_Response__c</fullName>
    <label>Identity Theft-Challenge Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>