sfdx-source/dx-training/main/objects/Account/fields/Infrequent_Patient_Status__c.field-meta.xml
<CustomField>
    <fullName>Infrequent_Patient_Status__c</fullName>
    <label>Infrequent Patient Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>VA Patient</fullName>
            </value>
            <value>
                <fullName>Workers Comp</fullName>
            </value>
            <value>
                <fullName>International Patient</fullName>
            </value>
            <value>
                <fullName>HITECH</fullName>
            </value>
            <value>
                <fullName>Prisoner</fullName>
            </value>
            <value>
                <fullName>Project Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>