sfdx-source/dx-training/main/objects/Account/fields/Infrequent_Patient_Status_Verified__c.field-meta.xml
<CustomField>
    <fullName>Infrequent_Patient_Status_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infrequent Patient Status Verified</label>
    <type>Checkbox</type>
</CustomField>