sfdx-source/dx-training/main/objects/Account/fields/Infrequent_Patient_Status_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Infrequent_Patient_Status_Verified_Date__c</fullName>
    <label>Infrequent Patient Status Verified Date</label>
    <type>Date</type>
</CustomField>