sfdx-source/dx-training/main/objects/Account/fields/inHL7Update__c.field-meta.xml
<CustomField>
    <fullName>inHL7Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to prevent outbound change message from being sent to Epic as a result of an inbound message from Epic.</description>
    <label>inHL7Update</label>
    <type>Checkbox</type>
</CustomField>