sfdx-source/dx-training/main/objects/Account/fields/International_Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>International_Referral_Status__c</fullName>
    <label>International Referral Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>