sfdx-source/dx-training/main/objects/Account/fields/Interpreter_Needed2__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Needed2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not in HC</description>
    <label>Interpreter Needed2</label>
    <type>Checkbox</type>
</CustomField>