sfdx-source/dx-training/main/objects/Account/fields/Interpreter_Needed__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Needed__c</fullName>
    <label>Interpreter Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>