sfdx-source/dx-training/main/objects/Account/fields/Interpreter_Needed_Verified__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Needed_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interpreter Needed Verified</label>
    <type>Checkbox</type>
</CustomField>