sfdx-source/dx-training/main/objects/Account/fields/Interpreter_Needed_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Needed_Verified_Date__c</fullName>
    <label>Interpreter Needed Verified Date</label>
    <type>Date</type>
</CustomField>