sfdx-source/dx-training/main/objects/Account/fields/Interpreter_Needed_Youreka__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Needed_Youreka__c</fullName>
    <label>Interpreter Needed Youreka</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>