sfdx-source/dx-training/main/objects/Account/fields/Invited_to_Community__c.field-meta.xml
<CustomField>
    <fullName>Invited_to_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invited to Community</label>
    <type>Checkbox</type>
</CustomField>