sfdx-source/dx-training/main/objects/Account/fields/Is_In_County__c.field-meta.xml
<CustomField>
    <fullName>Is_In_County__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is In-County</label>
    <type>Checkbox</type>
</CustomField>