sfdx-source/dx-training/main/objects/Account/fields/Is_In_County_Formula__c.field-meta.xml
<CustomField>
    <fullName>Is_In_County_Formula__c</fullName>
    <formula>Is_In_County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is In-County Formula</label>
    <type>Checkbox</type>
</CustomField>