sfdx-source/dx-training/main/objects/Account/fields/Is_Specialty_Match__c.field-meta.xml
<CustomField>
    <fullName>Is_Specialty_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Specialty Match</label>
    <type>Checkbox</type>
</CustomField>