sfdx-source/dx-training/main/objects/Account/fields/isConfidentialNamePopulated__c.field-meta.xml
<CustomField>
    <fullName>isConfidentialNamePopulated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JV - For Account Sharing Rule, will update field if Confidential Name != Null</description>
    <label>isConfidentialNamePopulated</label>
    <type>Checkbox</type>
</CustomField>