sfdx-source/dx-training/main/objects/Account/fields/isLegacyPatient__c.field-meta.xml
<CustomField>
    <fullName>isLegacyPatient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For patients not active in the past 10 years past appointments will not have been loaded into SF.  Notification when true: &quot;Check MaestroCare for full Patient History&quot;</description>
    <label>isLegacyPatient</label>
    <type>Checkbox</type>
</CustomField>