sfdx-source/dx-training/main/objects/Account/fields/IsMarkedForMerge__c.field-meta.xml
<CustomField>
    <fullName>IsMarkedForMerge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMarkedForMerge</label>
    <type>Checkbox</type>
</CustomField>