sfdx-source/dx-training/main/objects/Account/fields/IsUnmerged__c.field-meta.xml
<CustomField>
    <fullName>IsUnmerged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUnmerged</label>
    <type>Checkbox</type>
</CustomField>