sfdx-source/dx-training/main/objects/Account/fields/Languages_Youreka__c.field-meta.xml
<CustomField>
    <fullName>Languages_Youreka__c</fullName>
    <label>Languages Youreka</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Abkhaz</fullName>
            </value>
            <value>
                <fullName>Adyghe</fullName>
            </value>
            <value>
                <fullName>Afrikaans</fullName>
            </value>
            <value>
                <fullName>Akan</fullName>
            </value>
            <value>
                <fullName>Albanian</fullName>
            </value>
            <value>
                <fullName>American Sign Language</fullName>
            </value>
            <value>
                <fullName>Amharic</fullName>
            </value>
            <value>
                <fullName>Ancient Greek</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Aragonese</fullName>
            </value>
            <value>
                <fullName>Aramaic</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Aymara</fullName>
            </value>
            <value>
                <fullName>Balinese</fullName>
            </value>
            <value>
                <fullName>Basque</fullName>
            </value>
            <value>
                <fullName>Betawi</fullName>
            </value>
            <value>
                <fullName>Bosnian</fullName>
            </value>
            <value>
                <fullName>Breton</fullName>
            </value>
            <value>
                <fullName>Bulgarian</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Catalan</fullName>
            </value>
            <value>
                <fullName>Cherokee</fullName>
            </value>
            <value>
                <fullName>Chickasaw</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Coptic</fullName>
            </value>
            <value>
                <fullName>Cornish</fullName>
            </value>
            <value>
                <fullName>Corsican</fullName>
            </value>
            <value>
                <fullName>Crimean Tatar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>