sfdx-source/dx-training/main/objects/Account/fields/Marital_Status_Youreka__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status_Youreka__c</fullName>
    <label>Marital Status Youreka</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Legally Separated</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>