sfdx-source/dx-training/main/objects/Account/fields/My_Chart_Status__c.field-meta.xml
<CustomField>
    <fullName>My_Chart_Status__c</fullName>
    <label>My Chart Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>