sfdx-source/dx-training/main/objects/Account/fields/My_Cool_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>My_Cool_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>My First Cool Checkbox</label>
    <type>Checkbox</type>
</CustomField>