sfdx-source/dx-training/main/objects/Account/fields/MyChart_Account__c.field-meta.xml
<CustomField>
    <fullName>MyChart_Account__c</fullName>
    <label>MyChart Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>