sfdx-source/dx-training/main/objects/Account/fields/New_Patient_Indicator__c.field-meta.xml
<CustomField>
    <fullName>New_Patient_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Patient Indicator</label>
    <type>Checkbox</type>
</CustomField>