sfdx-source/dx-training/main/objects/Account/fields/Patient_Access_Allow_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Patient_Access_Allow_Cancellation__c</fullName>
    <label>Patient Access - Allow Cancellation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>