sfdx-source/dx-training/main/objects/Account/fields/Patient_Comments__c.field-meta.xml
<CustomField>
    <fullName>Patient_Comments__c</fullName>
    <label>Patient Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>