sfdx-source/dx-training/main/objects/Account/fields/Patient_Email_Exists__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email_Exists__c</fullName>
    <label>Patient Email Exists</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>