sfdx-source/dx-training/main/objects/Account/fields/Patient_Status__c.field-meta.xml
<CustomField>
    <fullName>Patient_Status__c</fullName>
    <label>Patient Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alive</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>