sfdx-source/dx-training/main/objects/Account/fields/Patient_Type_Youreka__c.field-meta.xml
<CustomField>
    <fullName>Patient_Type_Youreka__c</fullName>
    <label>Patient Type Youreka</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anonymous</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Organ (Transplant)</fullName>
            </value>
            <value>
                <fullName>Prisoner</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Verified with no Medicare</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>