sfdx-source/dx-training/main/objects/Account/fields/PatientType__c.field-meta.xml
<CustomField>
    <fullName>PatientType__c</fullName>
    <description>Not in HC - Drives scripting</description>
    <label>Patient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anonymous</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Organ</fullName>
                <label>Organ (Transplant)</label>
            </value>
            <value>
                <fullName>PRISONER</fullName>
                <label>Prisoner</label>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>No Medicare</fullName>
                <label>Verified with no Medicare</label>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Dismissed from Duke</fullName>
                <isActive>false</isActive>
                <label>Dismissed from Duke</label>
            </value>
            <value>
                <fullName>Dismissed from Practice</fullName>
                <isActive>false</isActive>
                <label>Dismissed from Practice</label>
            </value>
            <value>
                <fullName>International</fullName>
                <isActive>false</isActive>
                <label>International</label>
            </value>
            <value>
                <fullName>Organ/Transplant</fullName>
                <isActive>false</isActive>
                <label>Organ/Transplant</label>
            </value>
            <value>
                <fullName>Prisonerold</fullName>
                <isActive>false</isActive>
                <label>Prisonerold</label>
            </value>
            <value>
                <fullName>Verify with no Medicare</fullName>
                <isActive>false</isActive>
                <label>Verify with no Medicare</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>