sfdx-source/dx-training/main/objects/Account/fields/Payer_ID__c.field-meta.xml
<CustomField>
    <fullName>Payer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Payer ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>