sfdx-source/dx-training/main/objects/Account/fields/PCP_Address__c.field-meta.xml
<CustomField>
    <fullName>PCP_Address__c</fullName>
    <label>PCP Address</label>
    <type>TextArea</type>
</CustomField>