sfdx-source/dx-training/main/objects/Account/fields/PCP_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>PCP_Address_Formula__c</fullName>
    <formula>PCP_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCP Address Formula</label>
    <type>Text</type>
</CustomField>