sfdx-source/dx-training/main/objects/Account/fields/PCP_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>PCP_Address_Id__c</fullName>
    <label>PCP Address Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>