sfdx-source/dx-training/main/objects/Account/fields/PCP_Address_Youreka__c.field-meta.xml
<CustomField>
    <fullName>PCP_Address_Youreka__c</fullName>
    <label>PCP Address Youreka</label>
    <type>TextArea</type>
</CustomField>