sfdx-source/dx-training/main/objects/Account/fields/PCP_Verified__c.field-meta.xml
<CustomField>
    <fullName>PCP_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCP Verified</label>
    <type>Checkbox</type>
</CustomField>