sfdx-source/dx-training/main/objects/Account/fields/PCP_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>PCP_Verified_Date__c</fullName>
    <label>PCP Verified Date</label>
    <type>Date</type>
</CustomField>