sfdx-source/dx-training/main/objects/Account/fields/PersonTeenPhone__c.field-meta.xml
<CustomField>
    <fullName>PersonTeenPhone__c</fullName>
    <description>Not IN HC</description>
    <label>Teen Phone</label>
    <type>Phone</type>
</CustomField>