sfdx-source/dx-training/main/objects/Account/fields/PersonWorkPhone__c.field-meta.xml
<CustomField>
    <fullName>PersonWorkPhone__c</fullName>
    <description>Not In HC</description>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>