sfdx-source/dx-training/main/objects/Account/fields/Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practitioner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Practitioner)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>