sfdx-source/dx-training/main/objects/Account/fields/Preferred_Phone_Blank__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone_Blank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferred Phone Blank</label>
    <type>Checkbox</type>
</CustomField>