sfdx-source/dx-training/main/objects/Account/fields/Preferred_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone_Number__c</fullName>
    <label>Preferred Phone Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>