sfdx-source/dx-training/main/objects/Account/fields/Preferred_Phone_Number_Multi__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone_Number_Multi__c</fullName>
    <label>Preferred Phone Number (Multi)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>