sfdx-source/dx-training/main/objects/Account/fields/Pregnancy_Flag__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy_Flag__c</fullName>
    <label>Pregnancy Flag</label>
    <length>64</length>
    <type>Text</type>
</CustomField>