sfdx-source/dx-training/main/objects/Account/fields/Primary_Language_Blank__c.field-meta.xml
<CustomField>
    <fullName>Primary_Language_Blank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Language Blank</label>
    <type>Checkbox</type>
</CustomField>