sfdx-source/dx-training/main/objects/Account/fields/Program_Service_Interest__c.field-meta.xml
<CustomField>
    <fullName>Program_Service_Interest__c</fullName>
    <label>Program/Service Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duke Weight Loss Program</fullName>
            </value>
            <value>
                <fullName>Optifast Program</fullName>
            </value>
            <value>
                <fullName>Bod Pod Testing</fullName>
            </value>
            <value>
                <fullName>Outpatient Services Nutrition</fullName>
            </value>
            <value>
                <fullName>Outpatient Services Behavioral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>