sfdx-source/dx-training/main/objects/Account/fields/Providers_Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Providers_Dismissed__c</fullName>
    <label>Providers Dismissed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>