sfdx-source/dx-training/main/objects/Account/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>W</fullName>
                <label>Caucasian/White</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Black or African American</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Asian</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Native Hawaiian or Other Pacific Islander</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Not Reported/Declined</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>American Indian or Alaskan Native</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>