sfdx-source/dx-training/main/objects/Account/fields/Race_Other__c.field-meta.xml
<CustomField>
    <fullName>Race_Other__c</fullName>
    <label>Race &quot;Other&quot;</label>
    <length>150</length>
    <type>Text</type>
</CustomField>