sfdx-source/dx-training/main/objects/Account/fields/Race_Youreka__c.field-meta.xml
<CustomField>
    <fullName>Race_Youreka__c</fullName>
    <label>Race Youreka</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caucasian/White</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Reported/Declined</fullName>
            </value>
            <value>
                <fullName>American Indian or Alaskan Native</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>