sfdx-source/dx-training/main/objects/Account/fields/Reason_for_Dismissal__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Dismissal__c</fullName>
    <label>Reason for Dismissal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>