sfdx-source/dx-training/main/objects/Account/fields/Reason_For_No_Email__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_No_Email__c</fullName>
    <label>Reason For No Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>