sfdx-source/dx-training/main/objects/Account/fields/Referred_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Email__c</fullName>
    <inlineHelpText>Email address of the person or medical institution that referred this individual to DHW.</inlineHelpText>
    <label>Referred By - Email</label>
    <type>Email</type>
</CustomField>