sfdx-source/dx-training/main/objects/Account/fields/Referred_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Name__c</fullName>
    <inlineHelpText>Name of the person or medical institution that referred this individual to DHW.</inlineHelpText>
    <label>Referred By - Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>